--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.10",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-window": "^1.8.8",
     "husky": "^9.1.7",
     "prettier": "3.4.1"
   },
